add http client

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
       <div class="col-lg-2 px-0">
         <app-sidenav></app-sidenav>
       </div>
-      <div class="col-lg-10">
+      <div class="col-lg-10 px-0">
         <router-outlet></router-outlet>
       </div>
     </div>
   </div>
 </main>
-<footer></footer>
+<footer class="bg-primary text-light"><h4>&nbsp;&copy;&nbsp; Eli Pentser 2021</h4></footer>
 
 
