--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+
+
+<div class="container-floud home-image">
+  <div class="row home-text">
+     <h3 class='display-3'>Wellcome to flightCRM</h3>
+  </div>
+</div>
