--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -12,21 +12,27 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link text-white" routerLink='/ticket'>
-
+    <a class="nav-link text-white" routerLink='/tickets'>
+      <i class="fas fa-ticket-alt"></i>
       Tickets
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link text-white" routerLink='countries'>
+    <a class="nav-link text-white" routerLink='/countries'>
       <i class="fas fa-globe-europe"></i>
       Countries
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link text-white" href="#">
+    <a class="nav-link text-white" routerLink="/messages">
       <i class="far fa-calendar-times"></i>
-      RabbitMQ
+      RabbitMQ/Logs
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link text-white" routerLink="/posts">
+      <i class="fas fa-blog"></i>
+      Posts
     </a>
   </li>
 </ul>
