--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,1 +1,8 @@
-<p>customers works!</p>
+
+<div *ngIf="customerApi.customers| async as customers">
+  <pre>
+
+    {{ customers | json }}
+
+  </pre>
+</div>
