--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -5,9 +5,10 @@
       Customers
     </a>
   </li>
+
   <li class="nav-item">
     <a class="nav-link text-white" routerLink='/flights'>
-      <i class="fas fa-plane"></i>
+      <i class="fas fa-plane-departure"></i>
       Flights
     </a>
   </li>
@@ -23,6 +24,13 @@
       Countries
     </a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link text-white" routerLink='/airlines'>
+      <i class="fas fa-plane"></i>
+      airlines
+    </a>
+  </li>
+
   <li class="nav-item">
     <a class="nav-link text-white" routerLink="/messages">
       <i class="far fa-calendar-times"></i>
