--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -73,6 +73,29 @@
         </div>
       </div>
 
+      <div class="form-group mb-4">
+        <div class="form-group">
+          <select
+            #ruleF="ngModel"
+            ngModel
+            name="rule"
+            required
+            [ngClass]="{ 'is-invalid': ruleF.errors && ruleF.touched }"
+            id="rule"
+            class="form-select"
+            autocomplete="current-rule">
+            <option selected>choose your rule</option>
+            <option value="customer">Customer</option>
+            <option value="airline">Airline</option>
+            <option value="admin">Admin</option>
+          </select>
+
+          <div [hidden]="!ruleF.errors?.required" class="invalid-feedback">
+            rule is required
+          </div>
+        </div>
+      </div>
+
       <button
         [disabled]="!signupForm.form.valid"
         class="btn btn-lg btn-primary btn-block"
