--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,4 +4,11 @@
   <div class="row home-text">
      <h3 class='display-3'>Wellcome to flightCRM</h3>
   </div>
+  <div class="row">
+   <app-login *ngIf="!res;else profile;"></app-login>
+  </div>
 </div>
+
+<ng-template #profile>
+  <p>Wellcome: {{res.token}}</p>
+</ng-template>
