--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
      <h3 class='display-3'>Wellcome to flightCRM</h3>
   </div>
   <div class="row">
-   <app-login *ngIf="!res;else profile;"></app-login>
+   <app-login *ngIf="res;else profile;"></app-login>
   </div>
 </div>
 
