--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,10 +5,10 @@
      <h3 class='display-3'>Wellcome to flightCRM</h3>
   </div>
   <div class="row">
-   <app-login *ngIf="isLogin;else profile;"></app-login>
+   <app-login *ngIf="!isLogin;else profile;"></app-login>
   </div>
 </div>
 
 <ng-template #profile>
-  <p>Wellcome: {{res.token}}</p>
+  <p>Wellcome: {{user}}</p>
 </ng-template>
