--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            [anonymous@]
+            {{(isLogin)?user['email']:'anonymous@'}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">My Preferences</a></li>
