add search componnent

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -34,7 +34,7 @@
   <li class="nav-item">
     <a class="nav-link text-white" routerLink="/messages">
       <i class="far fa-calendar-times"></i>
-      RabbitMQ/Logs
+      flights Logs(Admin)
     </a>
   </li>
   <li class="nav-item">
