--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -29,7 +29,7 @@
       </ul>
       <form class="d-flex">
         <input class="form-control m-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Elastics search</button>
+        <button class="btn btn-outline-light" routerLink='/search'>Flight search</button>
       </form>
     </div>
   </div>
