--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,6 +8,13 @@
    <app-login *ngIf="!isLogin;else profile;"></app-login>
   </div>
 </div>
+<div class="row">
+  <div class="col-lg-12  m-1">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13520.499980801453!2d34.80721575000001!3d32.0929073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1siw!2sil!4v1634629393453!5m2!1siw!2sil" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste sed rerum quia cupiditate ratione rem illum dolor, provident voluptatem quaerat quidem doloribus voluptatum vitae perspiciatis fuga consectetur, animi hic quas. Dicta fugit facere, reiciendis beatae delectus iure pariatur voluptatum ab ullam dolores asperiores iusto! Possimus suscipit explicabo natus velit sapiente veniam, fugiat quibusdam maxime illum, atque eligendi. Sit reiciendis numquam magni aspernatur iure optio incidunt nostrum vero. Doloremque, veniam! Laborum, quam magni nesciunt recusandae, temporibus minima obcaecati quaerat dignissimos aliquam nulla laudantium quia voluptas hic exercitationem! Ratione, commodi! Fugiat commodi blanditiis quaerat eveniet officiis quia temporibus, ullam reiciendis enim iure!</p>
+  </div>
+   </div>
 
 <ng-template #profile>
   <p>Wellcome: {{user}}</p>
