--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -1,10 +1,27 @@
 
 <div *ngIf="countryApi.countries| async as countries">
   <pre>
-
     {{ countries | json }}
-
   </pre>
+  <table class="table">
+    <thead>
+      <tr>
+      <th scope="col">#</th>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+    </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let country of countries;inx as index" >
+      <tr>
+        <th scope="row">{{inx}}</th>
+        <td scope="row">{{country.id}}</td>
+        <td scope="row">{{country.name}}</td>
+      </tr>
+      </ng-container>
+    </tbody>
+
+    </table>
 </div>
 
 
