--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,8 +1,39 @@
 
 <div *ngIf="customerApi.customers| async as customers">
-  <pre>
-
+   <pre>
     {{ customers | json }}
-
   </pre>
+  <table class="table">
+    <thead>
+      <tr>
+      <th scope="col">#</th>
+      <th scope="col">Id</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Address</th>
+      <th scope="col">Phone Number</th>
+      <th scope="col">User Id</th>
+      <th scope="col">Credit Card No</th>
+
+    </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let customer of customers;inx as index" >
+      <tr>
+        <th scope="row">{{inx}}</th>
+        <td scope="row">{{customer.id}}</td>
+        <td scope="row">{{customer.first_name}}</td>
+        <td scope="row">{{customer.last_name}}</td>
+        <td scope="row">{{customer.address}}</td>
+        <td scope="row">{{customer.phone_no}}</td>
+        <td scope="row">{{customer.user_id}}</td>
+        <td scope="row">{{customer.credit_card_no}}</td>
+      </tr>
+      </ng-container>
+    </tbody>
+
+    </table>
+
 </div>
+
+
