--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -43,5 +43,12 @@
       Posts
     </a>
   </li>
+
+  <li class="nav-item">
+    <a class="nav-link text-black" routerLink="/about">
+      <i class="far fa-address-card"></i>
+      About
+    </a>
+  </li>
 </ul>
 
