update airline table view

--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -7,8 +7,11 @@
       <tr>
       <th scope="col">#</th>
       <th scope="col">Id</th>
-      <th scope="col">Country Id</th>
-      <th scope="col">User Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Country</th>
+      <th scope="col">User Name</th>
+
+
     </tr>
     </thead>
     <tbody>
@@ -16,8 +19,9 @@
       <tr>
         <th scope="row">{{inx}}</th>
         <td scope="row">{{airline.id}}</td>
-        <td scope="row">{{airline.country_id}}</td>
-        <td scope="row">{{airline.user_id}}</td>
+        <td scope="row">{{airline.name}}</td>
+        <td scope="row">{{airline.country}}</td>
+        <td scope="row">{{airline.username}}</td>
       </tr>
       </ng-container>
     </tbody>
