--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -11,7 +11,7 @@
 .card-title {
   margin: auto;
   padding: 15px;
-  background-color: #2f7fad;
+  background-color: #0d6efd;
   color: white;
   width: 80%
 }
@@ -70,15 +70,18 @@ select:focus {
 }
 
 .fa-plane {
-  color: #1cad9f
+  color: #0d6efd;
+  margin: 5px
 }
 
 .fa-taxi {
-  color: #c2f700
+  color: #417eda;
+  margin: 5px;
 }
 
 .fa-train {
-  color: red
+  color: #85a1cc;
+  margin:5px;
 }
 
 @media only screen and (max-width: 600px) {
