--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -5,6 +5,12 @@
     <div class="card-body">
         <!--Card-Title-->
         <p class="card-title text-center shadow m-5 rounded">Search your flight</p>
+        <form
+        #searchForm="ngForm"
+        (ngSubmit)="onSubmit(searchForm)"
+        novalidate
+        autocomplete="off" >
+
         <div class="icons text-center">
             <i class="fa fa-plane fa-2x" aria-hidden="true"></i>
             <i class="fa fa-taxi fa-2x" aria-hidden="true"></i>
@@ -12,6 +18,7 @@
         <hr>
         <p class="searchText"><strong>Search For Flights</strong></p>
         <!--First Row-->
+
         <div class="row mb-3 mt-3"> <label class="radiobtn"><input type="radio" name="gender" value="male"> One Way</label> <label class="radiobtn"><input type="radio" name="gender" value="male" checked> Round Trip</label> </div>
         <!--Second Row-->
         <div class="row">
@@ -71,6 +78,7 @@
                     <option value="3">3</option>
                 </select> </div>
         </div> <a href="#" class="btn btn-primary float-right mt-5">Find Flights</a>
+      </form>
     </div>
 </div>
 
