--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -77,7 +77,7 @@
                     <option value="2">2</option>
                     <option value="3">3</option>
                 </select> </div>
-        </div> <a href="#" class="btn btn-primary float-right mt-5">Find Flights</a>
+        </div> <a routerLink="#" type="submit" class="btn btn-primary float-right mt-5">Find Flights</a>
       </form>
     </div>
 </div>
