--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -8,7 +8,7 @@
       autocomplete="off"
     >
       <div class="text-center mb-4">
-        <p>Login with your account</p>
+        <p>Signup with your account</p>
       </div>
 
       <div class="form-group mb-4">
@@ -16,12 +16,12 @@
           <input
             #userF="ngModel"
             ngModel
-            name="user"
+            name="username"
             required
             [ngClass]="{ 'is-invalid': userF.errors && userF.touched }"
             type="text"
-            placeholder="john doe"
-            id="user"
+            placeholder="User Name"
+            id="username"
             class="form-control"
             autocomplete="username"
           />
@@ -41,6 +41,7 @@
             ngModel
             name="password"
             required
+            placeholder="Password"
             [ngClass]="{ 'is-invalid': passwordF.errors && passwordF.touched }"
             type="password"
             id="password"
@@ -66,6 +67,7 @@
             id="email"
             class="form-control"
             autocomplete="current-email"
+            placeholder="Email Address"
           />
           <div [hidden]="!emailF.errors?.required" class="invalid-feedback">
             Email is required
@@ -85,9 +87,9 @@
             class="form-select"
             autocomplete="current-rule">
             <option selected>choose your rule</option>
-            <option value="customer">Customer</option>
-            <option value="airline">Airline</option>
-            <option value="admin">Admin</option>
+            <option value="Customer">Customer</option>
+            <option value="Airline">Airline</option>
+            <option value="Admin">Admin</option>
           </select>
 
           <div [hidden]="!ruleF.errors?.required" class="invalid-feedback">
