--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -85,8 +85,8 @@
             [ngClass]="{ 'is-invalid': ruleF.errors && ruleF.touched }"
             id="rule"
             class="form-select"
-            autocomplete="current-rule">
-            <option selected>choose your rule</option>
+            autocomplete="current-email">
+            <option value="" selected>choose your rule</option>
             <option value="Customer">Customer</option>
             <option value="Airline">Airline</option>
             <option value="Admin">Admin</option>
