--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -17,8 +17,7 @@
             {{(isLogin)?user['email']:'anonymous@'}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">My Preferences</a></li>
-            <li><a class="dropdown-item" href="#">Sign Out</a></li>
+            <li *ngIf="isLogin"><a class="dropdown-item" onclick="logOut">Log Out</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">About FlightCRM</a></li>
           </ul>
