--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,8 +5,8 @@
      <h3 class='display-3'>Wellcome to flightCRM</h3>
   </div>
   <div class="row">
-<!--    <app-login *ngIf="!isLogin;else profile;"></app-login> -->
-   <app-signup *ngIf="!isLogin;else profile;"></app-signup>
+<app-login *ngIf="!isLogin;else profile;"></app-login>
+
 
   </div>
 </div>
@@ -16,5 +16,5 @@
    </div>
 
 <ng-template #profile>
-  <p>Wellcome: {{user}}</p>
+  <p class="text-light">Wellcome: {{user.username}}</p>
 </ng-template>
