--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -58,8 +58,10 @@
         class="btn btn-lg btn-primary btn-block"
         type="submit"
       >
-        Sign in
+        Log in
       </button>
+
+      <a class="m-5 text-seccess" routerLink="/signup">click here for SignUp</a>
     </form>
 
     <hr />
