--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -17,7 +17,7 @@
             {{(isLogin)?user['email']:'anonymous@'}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li *ngIf="isLogin"><a class="dropdown-item" href="#">Log Out</a></li>
+            <li *ngIf="isLogin"><a class="dropdown-item" (click)="logout()" routerLink="/">Log Out</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" routerLink='about'>About FlightCRM</a></li>
           </ul>
