add operations on all tables data with icons

--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -10,6 +10,8 @@
       <th scope="col">Name</th>
       <th scope="col">Country</th>
       <th scope="col">User Name</th>
+      <th scope="col">Operations</th>
+
 
 
     </tr>
@@ -22,6 +24,17 @@
         <td scope="row">{{airline.name}}</td>
         <td scope="row">{{airline.country}}</td>
         <td scope="row">{{airline.username}}</td>
+        <td scope="row">
+          <a href="#" class='m-1'>
+            <i class="fas fa-edit"> </i>
+          </a>
+          <a href="#" class='m-1'>
+          <i class="fas fa-trash-alt"> </i>
+        </a>
+      <a href="#" class="m-1">
+        <i class="far fa-plus-square"> </i>
+      </a></td>
+
       </tr>
       </ng-container>
     </tbody>
