--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -9,6 +9,7 @@
       <th scope="col">#</th>
       <th scope="col">Id</th>
       <th scope="col">Name</th>
+      <th scope="col">Operations</th>
     </tr>
     </thead>
     <tbody>
@@ -17,6 +18,16 @@
         <th scope="row">{{inx}}</th>
         <td scope="row">{{country.id}}</td>
         <td scope="row">{{country.name}}</td>
+        <td scope="row">
+          <a href="#" class='m-1'>
+            <i class="fas fa-edit"> </i>
+          </a>
+          <a href="#" class='m-1'>
+          <i class="fas fa-trash-alt"> </i>
+        </a>
+      <a href="#" class="m-1">
+        <i class="far fa-plus-square"> </i>
+      </a></td>
       </tr>
       </ng-container>
     </tbody>
