--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -14,6 +14,7 @@
       <th scope="col">Phone Number</th>
       <th scope="col">User Id</th>
       <th scope="col">Credit Card No</th>
+      <th scope="col">Operations</th>
 
     </tr>
     </thead>
@@ -28,6 +29,16 @@
         <td scope="row">{{customer.phone_no}}</td>
         <td scope="row">{{customer.user_id}}</td>
         <td scope="row">{{customer.credit_card_no}}</td>
+        <td scope="row">
+          <a href="#" class='m-1'>
+            <i class="fas fa-edit"> </i>
+          </a>
+          <a href="#" class='m-1'>
+          <i class="fas fa-trash-alt"> </i>
+        </a>
+      <a href="#" class="m-1">
+        <i class="far fa-plus-square"> </i>
+      </a></td>
       </tr>
       </ng-container>
     </tbody>
