--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -14,6 +14,7 @@
       <th scope="col">Departure Time</th>
       <th scope="col">Landing Time</th>
       <th scope="col">Remaning Tickets</th>
+      <th scope="col">Operations</th>
 
     </tr>
     </thead>
@@ -28,6 +29,16 @@
         <td scope="row">{{flight.departure_time}}</td>
         <td scope="row">{{flight.landing_time}}</td>
         <td scope="row">{{flight.remaining_tickets}}</td>
+        <td scope="row">
+          <a href="#" class='m-1'>
+            <i class="fas fa-edit"> </i>
+          </a>
+          <a href="#" class='m-1'>
+          <i class="fas fa-trash-alt"> </i>
+        </a>
+      <a href="#" class="m-1">
+        <i class="far fa-plus-square"> </i>
+      </a></td>
       </tr>
       </ng-container>
     </tbody>
