--- a/src/app/components/flights/flights.component.html
+++ b/src/app/components/flights/flights.component.html
@@ -31,13 +31,13 @@
         <td scope="row">{{flight.remaining_tickets}}</td>
         <td scope="row">
           <a href="#" class='m-1'>
-            <i class="fas fa-edit"> </i>
+            <i [hidden]="rule!=='Airline'" class="fas fa-edit"> </i>
           </a>
-          <a href="#" class='m-1'>
+          <a  [hidden]="rule!=='Airline'"href="#" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
       <a href="#" class="m-1">
-        <i class="far fa-plus-square"> </i>
+        <i [hidden]="rule!=='Airline'"class="far fa-plus-square"> </i>
       </a></td>
       </tr>
       </ng-container>
