update refresh componnet after change login\signup

--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -23,7 +23,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Airline</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> {{(isLogin)?user['rule']:'Anonymous'}}</a>
         </li>
       </ul>
       <form class="d-flex">
