update update\delete\delete via rule

--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -29,14 +29,15 @@
         <td scope="row">{{customer.phone_no}}</td>
         <td scope="row">{{customer.user_id}}</td>
         <td scope="row">{{customer.credit_card_no}}</td>
+
         <td scope="row">
-          <a href="#" class='m-1'>
+          <a [hidden]="rule!=='Admin'" href="#" class='m-1'>
             <i class="fas fa-edit"> </i>
           </a>
-          <a href="#" class='m-1'>
+          <a [hidden]="rule!=='Admin'" href="#" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-      <a href="#" class="m-1">
+      <a [hidden]="rule!=='Admin'" href="#" class="m-1">
         <i class="far fa-plus-square"> </i>
       </a></td>
       </tr>
