fix router.nevigate on signup view

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -103,7 +103,7 @@
         class="btn btn-lg btn-primary btn-block"
         type="submit"
       >
-        Sign in
+        Sign Up
       </button>
     </form>
 
