--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -31,13 +31,13 @@
         <td scope="row">{{customer.credit_card_no}}</td>
 
         <td scope="row">
-          <a [hidden]="rule!=='Admin'" routerLink="update" class='m-1'>
+          <a [hidden]="rule!=='Admin'" href="#" class='m-1'>
             <i class="fas fa-edit"> </i>
           </a>
-          <a [hidden]="rule!=='Admin'" routerLink="delete" class='m-1'>
+          <a [hidden]="rule!=='Admin'" href="#" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-      <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
+      <a [hidden]="rule!=='Admin'" href="#" class="m-1">
         <i class="far fa-plus-square"> </i>
       </a></td>
       </tr>
