--- a/src/app/components/airlines/airlines.component.html
+++ b/src/app/components/airlines/airlines.component.html
@@ -25,13 +25,13 @@
         <td scope="row">{{airline.country}}</td>
         <td scope="row">{{airline.username}}</td>
         <td scope="row">
-          <a [hidden]="rule!=='Admin'" href="#" class='m-1'>
+          <a [hidden]="rule!=='Admin'" routerLink="update" class='m-1'>
             <i  class="fas fa-edit"> </i>
           </a>
-          <a [hidden]="rule!=='Admin'"href="#" class='m-1'>
+          <a [hidden]="rule!=='Admin'" routerLink="delete" class='m-1'>
           <i class="fas fa-trash-alt"> </i>
         </a>
-         <a [hidden]="rule!=='Admin'" href="#" class="m-1">
+         <a [hidden]="rule!=='Admin'" routerLink="insert" class="m-1">
          <i class="far fa-plus-square"> </i>
         </a></td>
 
