add update logic to countries

--- a/src/app/components/countries/countries.component.html
+++ b/src/app/components/countries/countries.component.html
@@ -19,7 +19,7 @@
         <td scope="row">{{country.id}}</td>
         <td scope="row">{{country.name}}</td>
         <td scope="row">
-          <a [hidden]="rule!=='Admin'" routerLink="update" class='m-1'>
+          <a [hidden]="rule!=='Admin'" routerLink="update"  [queryParams]="{id:country.id,country: country.name}" class='m-1'>
             <i class="fas fa-edit"> </i>
           </a>
           <a [hidden]="rule!=='Admin'" routerLink="delete" class='m-1'>
